@@ -15,6 +15,7 @@ Module::Build->new(
         'Digest::MD5'   => 0,
         'File::Spec'    => 0,
         'perl'          => 5.006002,
+        'Text::Diff'    => 0,
     },
     recommends => {
         'Test::Pod'           => '1.20',
