@@ -11,4 +11,5 @@ all_pod_files_spelling_ok();
 __DATA__
 Kirrily
 checksum
+OldStyle
 
